# SHADE

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  e2e.sh  example_config.yaml  file_config.yaml  shade.yaml
.github/workflows/: release.yml  rust-clippy.yml
migrations/: 001_initial.sql
src/: cert.rs  cli.rs  config.rs  logger.rs  main.rs  proxy.rs  server.rs  socket.rs  storage.rs
src/migrations/: 001_initial.sql  mod.rs
src/models/: mod.rs
src/storage/: sqlite.rs
